[package]
name = "logger"
version = "0.1.0"
authors = ["David Glassanos <david@naturebox.com>"]

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
clap = "2.32.0"
toml = "0.4.9"
serde = "1.0.80"
serde_json = "1.0"
serde_derive = "1.0.80"
hyper = "0.12"
futures = "0.1.25"
tokio-io = "0.1"
tokio-fs = "0.1"
regex = "1"
ws = "0.7.9"
stopwatch = "0.0.7"
chrono = "0.4"